--- a/web/polished/style.css
+++ b/web/polished/style.css
@@ -65,7 +65,20 @@ tbody tr:nth-child(EVEN) { /* alternate color for odd rows */
     background-color: #e9ede8;
 }
 
-input, button {
+.btn {
+    padding: 2px 7px 2px 7px;
+    text-align: center;
+}
+
+.btn:hover, .btn:active {
+    text-decoration: none;
+}
+
+a.btn {
+    color: rgb(76, 76, 76);
+}
+
+input, button, .btn {
     border: 1px solid #bbb;
     border-radius: 0.75ex;
     -moz-border-radius: 0.75ex;
@@ -81,7 +94,7 @@ input, button {
     );
 }
 
-input.submit:hover, input.submit:active, button:hover, button:active {
+input.submit:hover, input.submit:active, button:hover, button:active, .btn:hover, .btn:active {
     color: #444444;
     background-image: -webkit-gradient(
         linear, left bottom, left top,
@@ -392,13 +405,13 @@ label {
     background-color: #D8DBD7;
 }
 
-#sbox > p:last-of-type {
+#form-controls {
     white-space: nowrap;
     /* 11ex = width(#qtbl td:first-child) + margin-left(body) */
     margin: 1ex 0 0.5ex 11ex;
 }
 
-#sbox > p:last-of-type > :nth-child(n+2) {
+#form-controls > :nth-child(n+2) {
     margin-left: 1ex;
 }
 
