--- a/web/menu.jspf
+++ b/web/menu.jspf
@@ -165,6 +165,12 @@ org.opensolaris.opengrok.web.Util"
 %>
 --%>
 </table>
+<div id="form-controls">
+    <input tabindex="9" class="submit" type="submit" value="Search"/>
+    <input tabindex="10" class="submit" onclick="javascript: clearSearchFrom();"
+           type="button" value="Clear"/>
+    <a href="help.jsp" target="_blank" class="help btn" title="Help" tabindex="11" />Help</a>
+</div>
 </div><%
 
     if (projects.size() != 0) {
@@ -222,16 +228,8 @@ org.opensolaris.opengrok.web.Util"
 <div id="ltbl">
     <!-- filled with javascript -->
 </div>
-    <div class="clearfix"></div>
-    <p><input tabindex="9" class="submit" type="submit" value="Search"/>
-    <input tabindex="10" class="submit" onclick="javascript: clearSearchFrom();"
-	   type="button" value=" Clear "/>
-    <button class="help" tabindex="11" onclick="window.open('help.jsp');">Help
-    </button>
-    </p>
 </form>
-    
-    <div class="clearfix"></div>
+<div class="clearfix"></div>
 <%
 }
 /* ---------------------- menu.jspf end --------------------- */
