--- a/web/offwhite/style.css
+++ b/web/offwhite/style.css
@@ -64,14 +64,28 @@ tbody tr:nth-child(EVEN) { /* alternate color for odd rows */
     background-color: #e4e4cf;
 }
 
-input, button {
+.btn {
+    padding-left: 7px;
+    padding-right: 7px;
+    text-align: center;
+}
+
+.btn:hover, .btn:active {
+    text-decoration: none;
+}
+
+a.btn {
+    color: rgb(76, 76, 76);
+}
+
+input, button, .btn {
     border: 1px solid #755;
     border-radius: 0.75ex;
     -moz-border-radius: 0.75ex;
     background-color: #d6d6c0;
 }
 
-input.submit:hover, input.submit:active, button:hover, button:active {
+input.submit:hover, input.submit:active, button:hover, button:active, .btn:hover, .btn:active {
     background-color: #e0e0d0;
 }
 
@@ -345,13 +359,13 @@ label {
     height: 100%;
 }
 
-#sbox > p:last-of-type {
+#form-controls {
     white-space: nowrap;
     /* 11ex = width(#qtbl td:first-child) + margin-left(body) */
     margin: 1ex 0 0.5ex 11ex;
 }
 
-#sbox > p:last-of-type > :nth-child(n+2) {
+#form-controls > :nth-child(n+2) {
     margin-left: 1ex;
 }
 
