--- a/web/menu.jspf
+++ b/web/menu.jspf
@@ -77,7 +77,7 @@ org.opensolaris.opengrok.web.Util"
 </script><%
     }
 %>
-<form action="search" id="sbox">
+<form action="<%= request.getContextPath() %>/search" id="sbox">
 <div id="qtbl">
 <table>
     <tr>
