--- a/web/default/style.css
+++ b/web/default/style.css
@@ -1032,11 +1032,11 @@ a.scope            { /* scope              */ color: dodgerblue; font-weight: bo
 /* *** scopes *** */
 
 span.scope-head {
-    display: block;
+    display: inline;
 }
 
 span.scope-body {
-    display: block;
+    display: inline;
 }
 
 span.unfold-icon {
