limiting the width of the scopes window to only some percentage of the screen fixes #1267

--- a/web/polished/style.css
+++ b/web/polished/style.css
@@ -937,6 +937,7 @@ a.scope            { /* scope              */ color: dodgerblue; font-weight: bo
 
 .scopes-window {
     min-width: 150px;
+    max-width: 40%;
     max-height: 400px;
 }
 
