--- a/web/offwhite/style.css
+++ b/web/offwhite/style.css
@@ -881,6 +881,7 @@ a.scope            { /* scope              */ color: dodgerblue; font-weight: bo
 
 .scopes-window {
     min-width: 150px;
+    max-width: 40%;
     max-height: 400px;
 }
 
