--- a/web/menu.jspf
+++ b/web/menu.jspf
@@ -18,7 +18,7 @@ information: Portions Copyright [yyyy] [name of copyright owner]
 
 CDDL HEADER END
 
-Copyright (c) 2007, 2016, Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2007, 2017, Oracle and/or its affiliates. All rights reserved.
 
 Portions Copyright 2011 Jens Elkner.
 
@@ -50,6 +50,7 @@ org.opensolaris.opengrok.web.Util"
 {
     // PageConfig cfg = PageConfig.get(request);
     ProjectHelper ph = ProjectHelper.getInstance(cfg);
+    JSONArray messages;
     Set<Project> projects = ph.getAllProjects();
     if (projects == null) {
         projects = new TreeSet<>();
@@ -191,8 +192,7 @@ org.opensolaris.opengrok.web.Util"
                     if (pRequested.contains(p.getDescription())) {
                         %> selected="selected"<%
                     }
-                    JSONArray messages = Util.messagesToJson(p.getDescription());
-                    if (!messages.isEmpty()) {
+                    if (!(messages = Util.messagesToJson(p)).isEmpty()) {
                     %> data-messages='<%= messages %>' <%
                         }
                     %>><%= Util.formQuoteEscape(p.getDescription()) %></option><%
@@ -209,8 +209,7 @@ org.opensolaris.opengrok.web.Util"
             if (pRequested.contains(p.getDescription())) {
                 %> selected="selected"<%
             }
-            JSONArray messages = Util.messagesToJson(p.getDescription());
-            if (!messages.isEmpty()) {
+            if (!(messages = Util.messagesToJson(p)).isEmpty()) {
                 %> data-messages='<%= messages %>' <%
             }
             %>><%= Util.formQuoteEscape(p.getDescription()) %></option><%
