--- a/web/polished/style.css
+++ b/web/polished/style.css
@@ -288,7 +288,7 @@ label {
     margin: 0;
 }
 
-#pagetitle { /* short verbal summary/description of the shown content */
+#dtag { /* short verbal summary/description of the shown content */
 }
 
 #filename { /* "Cross Reference: ..." */
@@ -298,6 +298,7 @@ label {
 }
 
 #Masthead { /* breadcrumb */
+    font-family: monospace; /* ala <kbd> */
     clear: left;
     background-color: #426477;
     border: 1px solid #bbb;
