simplify paths with empty components fixes #1325

--- a/web/polished/style.css
+++ b/web/polished/style.css
@@ -791,6 +791,10 @@ table#dirlist { /* the "Name" column */
     width: 3em;
 }
 
+span.simplified-path {
+    color: #888;
+}
+
 /* file display */
 div[id^='src'] {
     background: white;
