making the history slider look the same as the search slider fixes #1329

--- a/web/default/style.css
+++ b/web/default/style.css
@@ -1010,6 +1010,10 @@ a.scope            { /* scope              */ color: dodgerblue; font-weight: bo
     margin: 1px;
 }
 
+.slider {
+    font-family: sans-serif;
+}
+
 /* ############### start of footer ############## */
 #footer {
     color: #777777;
