--- a/web/offwhite/style.css
+++ b/web/offwhite/style.css
@@ -1041,6 +1041,10 @@ a.scope            { /* scope              */ color: dodgerblue; font-weight: bo
     margin: 1px;
 }
 
+.slider {
+    font-family: sans-serif;
+}
+
 /* ############### start of footer ############## */
 #footer {
     color: #755;
