removing member (global) variable cfg

--- a/web/foot.jspf
+++ b/web/foot.jspf
@@ -16,8 +16,7 @@ information: Portions Copyright [yyyy] [name of copyright owner]
 
 CDDL HEADER END
 
-Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
-Use is subject to license terms.
+Copyright (c) 2007, 2017, Oracle and/or its affiliates. All rights reserved.
 
 Portions Copyright 2011 Jens Elkner.
 --%><%@page import="
@@ -35,7 +34,7 @@ org.opensolaris.opengrok.web.Prefix"
 %><%
 /* ---------------------- foot.jspf start --------------------- */
 {
-    cfg = PageConfig.get(request);
+    PageConfig cfg = PageConfig.get(request);
 
         %>
     <div id="footer">
