--- a/web/projects.jspf
+++ b/web/projects.jspf
@@ -18,7 +18,8 @@ information: Portions Copyright [yyyy] [name of copyright owner]
 
 CDDL HEADER END
 
-Copyright (c) 2007, 2016, Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2007, 2017, Oracle and/or its affiliates. All rights reserved.
+
 Portions Copyright 2011 Jens Elkner.
 
 --%>
@@ -37,7 +38,7 @@ org.opensolaris.opengrok.configuration.Project
         request.setCharacterEncoding("UTF-8");
     }
 
-    cfg = PageConfig.get(request);
+    PageConfig cfg = PageConfig.get(request);
     cfg.getEnv().setUrlPrefix(request.getContextPath() + Prefix.SEARCH_R + "?");
 
     String projects = cfg.getRequestedProjectsAsString();
